# Compare-image

./: README.rst  pyproject.toml
compare_img/: compare.py
tests/: test_compare_img.py
